--- a/trunk/android-app/app/src/main/AndroidManifest.xml
+++ b/trunk/android-app/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
     <application
         android:name=".DDScannerApplication"
         android:allowBackup="true"
-        android:icon="@drawable/dds_logo"
+        android:icon="@mipmap/ic_launcher_app"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
