--- a/trunk/android-app/app/build.gradle
+++ b/trunk/android-app/app/build.gradle
@@ -26,17 +26,18 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:+'
-    compile 'com.android.support:recyclerview-v7:+'
-    compile 'com.android.support:cardview-v7:+'
-    compile 'com.android.support:design:+'
-    compile 'com.android.support:support-v13:+'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.facebook.android:facebook-android-sdk:4.9.0'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:support-v13:23.1.1'
     compile 'com.squareup:otto:1.3.6'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.google.android.gms:play-services-maps:8.3.0'
+    compile 'com.google.android.gms:play-services-maps:8.4.0'
     compile 'org.parceler:parceler-api:1.0.4'
     compile 'com.facebook.fresco:fresco:0.7.0'
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
