--- a/trunk/android-app/app/build.gradle
+++ b/trunk/android-app/app/build.gradle
@@ -15,6 +15,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -24,6 +25,10 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
@@ -31,6 +36,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.facebook.android:facebook-android-sdk:4.9.0'
+//    compile ('com.facebook.android:facebook-android-sdk:4.9.0'){
+//        exclude group: 'com.parse.bolts', module: 'bolts-tasks'
+//    }
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:support-v13:23.1.1'
     compile 'com.squareup:otto:1.3.6'
@@ -39,7 +47,9 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.google.android.gms:play-services-maps:8.4.0'
     compile 'org.parceler:parceler-api:1.0.4'
-    compile 'com.facebook.fresco:fresco:0.7.0'
+    compile ('com.facebook.fresco:fresco:0.7.0'){
+        exclude group: 'com.parse.bolts', module: 'bolts-android'
+    }
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
