--- a/trunk/android-app/app/build.gradle
+++ b/trunk/android-app/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 //    }
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:support-v13:23.1.1'
+    compile 'com.google.android.gms:play-services-auth:8.4.0'
     compile 'com.squareup:otto:1.3.6'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
