--- a/trunk/android-app/app/src/main/AndroidManifest.xml
+++ b/trunk/android-app/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+
 
     <permission android:name="travel.ilave.deepdivescanner.permission.C2D_MESSAGE" />
 
@@ -31,6 +34,8 @@
             android:label="@string/app_name" />
 
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
