--- a/trunk/android-app/app/build.gradle
+++ b/trunk/android-app/app/build.gradle
@@ -23,6 +23,7 @@ android {
         applicationId "travel.ilave.deepdivescanner"
         minSdkVersion 15
         targetSdkVersion 23
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
     }
@@ -68,8 +69,11 @@ dependencies {
     compile('com.mopub:mopub-sdk:4.3.0@aar') {
         transitive = true
     }
-    compile('com.twitter.sdk.android:twitter:1.12.0@aar') {
+   compile('com.twitter.sdk.android:twitter:1.12.0@aar') {
         transitive = true;
     }
     compile('com.google.maps.android:android-maps-utils:0.3.4')
+    compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
+        transitive = true;
+    }
 }
