--- a/trunk/android-app/app/build.gradle
+++ b/trunk/android-app/app/build.gradle
@@ -72,4 +72,5 @@ dependencies {
         transitive = true;
     }
     compile('com.google.maps.android:android-maps-utils:0.3.4')
+    compile 'com.firebase:firebase-client-android:2.5.0+'
 }
