--- a/trunk/android-app/app/build.gradle
+++ b/trunk/android-app/app/build.gradle
@@ -12,6 +12,11 @@ apply plugin: 'io.fabric'
 apply plugin: 'com.google.gms.google-services'
 
 android {
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE-FIREBASE.txt'
+        exclude 'META-INF/NOTICE'
+    }
     signingConfigs {
         debug {
             storeFile file('../../../build/debug.keystore')
@@ -25,12 +30,16 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    dexOptions {
+        javaMaxHeapSize "2g"
     }
 }
 
@@ -42,6 +51,7 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile 'org.solovyev.android.views:linear-layout-manager:0.5@aar'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
@@ -51,27 +61,28 @@ dependencies {
 //    }
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:support-v13:23.1.1'
-    compile 'com.google.android.gms:play-services-auth:8.4.0'
+//    compile 'com.google.android.gms:play-services-auth:8.4.0'
     compile 'com.squareup:otto:1.3.6'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.google.android.gms:play-services-maps:8.4.0'
+   // compile 'com.google.android.gms:play-services-maps:8.4.0'
     compile 'org.parceler:parceler-api:1.0.4'
     compile ('com.facebook.fresco:fresco:0.7.0'){
         exclude group: 'com.parse.bolts', module: 'bolts-android'
     }
-    compile 'com.google.android.gms:play-services-gcm:8.4.0'
-    compile 'com.google.android.gms:play-services-location:8.4.0'
+  //  compile 'com.google.android.gms:play-services-gcm:8.4.0'
+   // compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.appyvet:materialrangebar:1.3'
     compile('com.mopub:mopub-sdk:4.3.0@aar') {
         transitive = true
     }
-    compile('com.twitter.sdk.android:twitter:1.12.0@aar') {
-        transitive = true;
-    }
+ //   compile('com.twitter.sdk.android:twitter:1.12.0@aar') {
+  //      transitive = true;
+  //  }
     compile('com.google.maps.android:android-maps-utils:0.3.4')
     compile 'com.firebase:firebase-client-android:2.5.0+'
     compile 'org.twitter4j:twitter4j-core:4.0.2'
+    compile 'com.google.android.gms:play-services:8.4.0'
 }
