--- a/trunk/android-app/app/build.gradle
+++ b/trunk/android-app/app/build.gradle
@@ -31,7 +31,7 @@ android {
         multiDexEnabled true
         versionCode 1
         versionName "1.0"
-        multiDexEnabled true
+    
     }
     buildTypes {
         release {
@@ -39,11 +39,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    dexOptions {
-        javaMaxHeapSize "2g"
-    }
-}
 
+}
 repositories {
     mavenCentral()
     maven { url 'https://maven.fabric.io/public' }
@@ -62,30 +59,31 @@ dependencies {
 //    }
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:support-v13:23.1.1'
-//    compile 'com.google.android.gms:play-services-auth:8.4.0'
+ //   compile 'com.google.android.gms:play-services-auth:8.4.0'
     compile 'com.squareup:otto:1.3.6'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
-   // compile 'com.google.android.gms:play-services-maps:8.4.0'
+  //  compile 'com.google.android.gms:play-services-maps:8.4.0'
     compile 'org.parceler:parceler-api:1.0.4'
     compile ('com.facebook.fresco:fresco:0.7.0'){
         exclude group: 'com.parse.bolts', module: 'bolts-android'
     }
   //  compile 'com.google.android.gms:play-services-gcm:8.4.0'
-   // compile 'com.google.android.gms:play-services-location:8.4.0'
+  //  compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.appyvet:materialrangebar:1.3'
     compile('com.mopub:mopub-sdk:4.3.0@aar') {
         transitive = true
     }
 
- //   compile('com.twitter.sdk.android:twitter:1.12.0@aar') {
-  //      transitive = true;
-  //  }
+    compile('com.twitter.sdk.android:twitter:1.12.0@aar') {
+        transitive = true;
+    }
     compile('com.google.maps.android:android-maps-utils:0.3.4')
-    compile 'com.firebase:firebase-client-android:2.5.0+'
-    compile 'org.twitter4j:twitter4j-core:4.0.2'
     compile 'com.google.android.gms:play-services:8.4.0'
+    compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
+        transitive = true;
+    }
 
 }
