--- a/trunk/android-app/app/src/main/AndroidManifest.xml
+++ b/trunk/android-app/app/src/main/AndroidManifest.xml
@@ -69,6 +69,9 @@
             android:name=".ui.activities.SealifeDetails"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".services.GooglePlusLogin"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".ui.activities.ImageSliderActivity"
             android:screenOrientation="portrait" />
         <receiver
