--- a/trunk/android-app/app/src/main/AndroidManifest.xml
+++ b/trunk/android-app/app/src/main/AndroidManifest.xml
@@ -55,6 +55,9 @@
             android:name=".ui.activities.FilterActivity"
             android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".ui.activities.ReviewsActivity"
+            android:screenOrientation="portrait">
+        </activity>
         <activity
             android:name=".ui.activities.DiveCentersActivity"
             android:screenOrientation="portrait">
@@ -68,6 +71,10 @@
         <activity
             android:name=".ui.activities.SealifeDetails"
             android:screenOrientation="portrait" />
+        <activity android:name=".ui.activities.LeaveReviewActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateVisible">
+        </activity>
         <activity
             android:name=".ui.activities.ImageSliderActivity"
             android:screenOrientation="portrait" />
