--- a/trunk/android-app/app/build.gradle
+++ b/trunk/android-app/app/build.gradle
@@ -20,7 +20,7 @@ android {
     compileSdkVersion 23
     buildToolsVersion "22.0.1"
     defaultConfig {
-        applicationId "travel.ilave.deepdivescanner"
+        applicationId "com.ddscanner"
         minSdkVersion 16
         targetSdkVersion 23
         multiDexEnabled true
