--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -48,9 +48,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.facebook.android:facebook-android-sdk:4.9.0'
-//    compile ('com.facebook.android:facebook-android-sdk:4.9.0'){
-//        exclude group: 'com.parse.bolts', module: 'bolts-tasks'
-//    }
+    //    compile ('com.facebook.android:facebook-android-sdk:4.9.0'){
+    //        exclude group: 'com.parse.bolts', module: 'bolts-tasks'
+    //    }
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:support-v13:23.1.1'
     //   compile 'com.google.android.gms:play-services-auth:8.4.0'
@@ -60,7 +60,7 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     //  compile 'com.google.android.gms:play-services-maps:8.4.0'
     compile 'org.parceler:parceler-api:1.0.4'
-    compile ('com.facebook.fresco:fresco:0.9.0'){
+    compile('com.facebook.fresco:fresco:0.9.0') {
         exclude group: 'com.parse.bolts', module: 'bolts-android'
     }
     //  compile 'com.google.android.gms:play-services-gcm:8.4.0'
@@ -69,11 +69,10 @@ dependencies {
     compile('com.mopub:mopub-sdk:4.3.0@aar') {
         transitive = true
     }
-
     compile('com.twitter.sdk.android:twitter:1.12.0@aar') {
         transitive = true;
     }
-    compile('com.google.maps.android:android-maps-utils:0.3.4')
+    compile 'com.google.maps.android:android-maps-utils:0.3.4'
     // compile 'com.google.android.gms:play-services:8.4.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
@@ -83,6 +82,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'com.google.android.gms:play-services-maps:8.4.0'
     compile 'com.google.android.gms:play-services-location:8.4.0'
-
-
+    compile files('libs/AF-Android-SDK.jar')
 }
