--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyA5jpAj7uwrxA4oaYvI_bdV9IDbb7gUrZc" />
+            android:value="	AIzaSyDt6pJZggDyU-aQy2Ks6i7WgZd6ayKK-I8" />
 
         <activity
             android:name=".ui.activities.SplashActivity"
@@ -85,6 +85,10 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible|adjustResize"
             >
+        </activity>
+        <activity
+            android:name=".ui.activities.DiveCenterDetailsActivity"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".ui.activities.ImageSliderActivity"
