--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -50,43 +50,42 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'org.solovyev.android.views:linear-layout-manager:0.5@aar'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.facebook.android:facebook-android-sdk:4.9.0'
     //    compile ('com.facebook.android:facebook-android-sdk:4.9.0'){
     //        exclude group: 'com.parse.bolts', module: 'bolts-tasks'
     //    }
-    compile 'com.android.support:design:23.1.1'
-    compile 'com.android.support:support-v13:23.1.1'
     //   compile 'com.google.android.gms:play-services-auth:8.4.0'
-    compile 'com.squareup:otto:1.3.6'
-    compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.squareup.okhttp:okhttp:2.4.0'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
     //  compile 'com.google.android.gms:play-services-maps:8.4.0'
-    compile 'org.parceler:parceler-api:1.0.4'
     compile('com.facebook.fresco:fresco:0.9.0') {
         exclude group: 'com.parse.bolts', module: 'bolts-android'
     }
     //  compile 'com.google.android.gms:play-services-gcm:8.4.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.appyvet:materialrangebar:1.3'
     compile('com.twitter.sdk.android:twitter:1.12.0@aar') {
         transitive = true;
     }
-    compile 'com.google.maps.android:android-maps-utils:0.3.4'
     // compile 'com.google.android.gms:play-services:8.4.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
+    compile files('libs/AF-Android-SDK.jar')
+    compile 'org.solovyev.android.views:linear-layout-manager:0.5@aar'
+    compile 'com.android.support:appcompat-v7:24.0.0-alpha1'
+    compile 'com.android.support:recyclerview-v7:24.0.0-alpha1'
+    compile 'com.facebook.android:facebook-android-sdk:4.9.0'
+    compile 'com.android.support:design:24.0.0-alpha1'
+    compile 'com.android.support:support-v13:24.0.0-alpha1'
+    compile 'com.squareup:otto:1.3.6'
+    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'org.parceler:parceler-api:1.0.4'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.appyvet:materialrangebar:1.3'
+    compile 'com.google.maps.android:android-maps-utils:0.3.4'
     compile 'com.google.android.gms:play-services-plus:8.4.0'
     compile 'com.google.android.gms:play-services-auth:8.4.0'
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'com.google.android.gms:play-services-maps:8.4.0'
     compile 'com.google.android.gms:play-services-location:8.4.0'
-    compile 'com.github.ganfra:material-spinner:1.1.1'
     compile 'com.ms-square:expandableTextView:0.1.4'
-    compile 'com.android.support:cardview-v7:23.0.+'
-    compile files('libs/AF-Android-SDK.jar')
+    compile 'com.android.support:cardview-v7:24.0.0-alpha1'
 }
