--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -60,6 +60,9 @@
         <activity android:name=".ui.activities.AddDiveSpotActivity"
             android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".ui.activities.PickLocationActivity"
+            android:screenOrientation="portrait">
+        </activity>
         <activity
             android:name=".ui.activities.FilterActivity"
             android:screenOrientation="portrait">
