--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -68,15 +68,16 @@ dependencies {
     }
     compile files('libs/AF-Android-SDK.jar')
     compile 'org.solovyev.android.views:linear-layout-manager:0.5@aar'
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:recyclerview-v7:23.2.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.facebook.android:facebook-android-sdk:4.9.0'
-    compile 'com.android.support:design:23.2.1'
-    compile 'com.android.support:support-v13:23.2.1'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:support-v13:23.1.1'
     compile 'com.squareup:otto:1.3.6'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.retrofit2:retrofit:2.0.1'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.1'
     compile 'org.parceler:parceler-api:1.0.4'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.appyvet:materialrangebar:1.3'
@@ -87,5 +88,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:8.4.0'
     compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.ms-square:expandableTextView:0.1.4'
-    compile 'com.android.support:cardview-v7:24.0.0-alpha1'
+    compile 'com.android.support:cardview-v7:23.1.1'
 }
