--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -35,6 +35,10 @@
             </intent-filter>
         </receiver>
 
+        <activity
+            android:name=".ui.activities.MainActivity"
+            android:screenOrientation="portrait">
+        </activity>
         <activity android:name="com.facebook.FacebookActivity"
             android:configChanges=
                 "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
