--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -89,4 +89,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:percent:23.0.0'
+    compile 'com.github.ganfra:material-spinner:1.1.1'
 }
