--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -90,4 +90,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:percent:23.0.0'
     compile 'com.github.ganfra:material-spinner:1.1.1'
+    compile 'com.github.rey5137:material:1.2.2'
 }
