--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -90,6 +90,6 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:percent:23.0.0'
-    compile 'com.github.ganfra:material-spinner:1.1.1'
     compile 'com.github.rey5137:material:1.2.2'
+    compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
 }
