Pick location bug fixed. Method to add sealife

--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -98,6 +98,8 @@
             android:name=".ui.activities.AddSealifeActivity"
             android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".ui.activities.EditDiveSpotActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.activities.CityActivity"
             android:screenOrientation="portrait" />
