--- a/trunk/ddscanner/app/local.properties
+++ b/trunk/ddscanner/app/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Apr 29 16:28:42 MSK 2016
-sdk.dir=C:\\Users\\SuzukPc\\AppData\\Local\\Android\\sdk
+#Sun May 08 01:30:13 MSK 2016
+sdk.dir=/home/lashket/Android/Sdk
