--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -72,6 +72,8 @@
         <activity android:name=".ui.activities.PickLocationActivity"
             android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".ui.activities.DiveSpotPhotosActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activities.FilterActivity"
             android:screenOrientation="portrait">
