Change layout style for showing all photos

--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -17,8 +17,10 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-
     <permission android:name="com.ddscanner.permission.C2D_MESSAGE" />
+
+    <android:uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:name=".DDScannerApplication"
@@ -28,8 +30,9 @@
         android:largeHeap="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <receiver android:name="com.appsflyer.MultipleInstallBroadcastReceiver" android:exported="true">
+        <receiver
+            android:name="com.appsflyer.MultipleInstallBroadcastReceiver"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.android.vending.INSTALL_REFERRER" />
             </intent-filter>
@@ -44,15 +47,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.facebook.FacebookActivity"
-            android:configChanges=
-                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:label="@string/app_name" />
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
-        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
-
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDt6pJZggDyU-aQy2Ks6i7WgZd6ayKK-I8" />
@@ -60,48 +66,48 @@
         <activity
             android:name=".ui.activities.SplashActivity"
             android:screenOrientation="portrait">
-      <!--      <intent-filter>
+
+            <!--
+                <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter> -->
+            </intent-filter>
+            -->
         </activity>
-        <activity android:name=".ui.activities.AddDiveSpotActivity"
-            android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".ui.activities.PickLocationActivity"
-            android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".ui.activities.DiveSpotPhotosActivity"
+        <activity
+            android:name=".ui.activities.AddDiveSpotActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ui.activities.PickLocationActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ui.activities.DiveSpotPhotosActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activities.FilterActivity"
-            android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".ui.activities.CheckInPeoplesActivity"
-            android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".ui.activities.ReviewsActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ui.activities.CheckInPeoplesActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ui.activities.ReviewsActivity"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".ui.activities.ShowDsLocationActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".ui.activities.DiveCentersActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".ui.activities.ProfileActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".ui.activities.AddSealifeActivity"
-            android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".ui.activities.EditDiveSpotActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ui.activities.EditDiveSpotActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activities.CityActivity"
             android:screenOrientation="portrait" />
@@ -114,34 +120,30 @@
         <activity
             android:name=".ui.activities.LeaveReviewActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"
-            >
-        </activity>
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity
             android:name=".ui.activities.ShowImageActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".ui.activities.DiveCenterDetailsActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".ui.activities.DiveSpotDetailsActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".ui.activities.SearchSealifeActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".ui.activities.ImageSliderActivity"
             android:screenOrientation="portrait" />
+
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
             android:exported="true"
             android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+
                 <category android:name="gcm.play.android.samples.com.gcmquickstart" />
             </intent-filter>
         </receiver>
@@ -153,7 +155,6 @@
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             </intent-filter>
         </service>
-
         <service
             android:name=".services.DDSInstanceIDListenerService"
             android:exported="false">
@@ -161,17 +162,18 @@
                 <action android:name="com.google.android.gms.iid.InstanceID" />
             </intent-filter>
         </service>
-
         <service
             android:name=".services.RegistrationIntentService"
-            android:exported="false"></service><![CDATA[
+            android:exported="false" />
         android:screenOrientation="portrait"/>
-        ]]>
-        <activity android:name=".ui.activities.SocialNetworks"
+        <activity
+            android:name=".ui.activities.SocialNetworks"
             android:screenOrientation="portrait" />
+
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="ed7107427d4db24c8d8509e14cd4e3e30daf7805" />
+
     </application>
 
 </manifest>
