--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -18,7 +18,7 @@ android {
         }
     }
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.3"
     defaultConfig {
         applicationId "com.ddscanner"
         minSdkVersion 16
@@ -68,11 +68,11 @@ dependencies {
     }
     compile files('libs/AF-Android-SDK.jar')
     compile 'org.solovyev.android.views:linear-layout-manager:0.5@aar'
-    compile 'com.android.support:appcompat-v7:23.1.0'
-    compile 'com.android.support:recyclerview-v7:23.2.1'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.facebook.android:facebook-android-sdk:4.9.0'
-    compile 'com.android.support:design:23.1.1'
-    compile 'com.android.support:support-v13:23.1.1'
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:support-v13:23.4.0'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
@@ -88,8 +88,9 @@ dependencies {
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'com.google.android.gms:play-services-maps:8.4.0'
     compile 'com.google.android.gms:play-services-location:8.4.0'
-    compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'com.android.support:percent:23.0.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.android.support:percent:23.4.0'
     compile 'com.github.rey5137:material:1.2.2'
     compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
+    compile 'com.afollestad.material-dialogs:core:0.8.5.9'
 }
