--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -64,7 +64,10 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDt6pJZggDyU-aQy2Ks6i7WgZd6ayKK-I8" />
+        <activity android:name=".ui.activities.UsersDivespotListSwipableActivity"
+            android:screenOrientation="portrait" >
 
+        </activity>
         <activity
             android:name=".ui.activities.SplashActivity"
             android:screenOrientation="portrait">
