Complete user profile

--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -72,7 +72,8 @@
             android:screenOrientation="portrait" >
 
         </activity>
-
+        <activity android:name=".ui.activities.DiveSpotsListActivity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".ui.activities.InternetClosedActivity"
             android:screenOrientation="portrait"
             />
