--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -94,4 +94,5 @@ dependencies {
     compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
     compile 'com.afollestad.material-dialogs:core:0.8.5.9'
     compile 'com.daimajia.swipelayout:library:1.2.0@aar'
+    compile 'com.github.ganfra:material-spinner:1.1.1'
 }
