Add photos to divespot

--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -90,6 +90,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.activities.AddPhotosDoDiveSpotActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activities.AddDiveSpotActivity"
             android:screenOrientation="portrait"/>
