* internet connection check for api > 21 > no connection activity restart + logging of no connection activity start

--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -80,6 +80,7 @@
         <activity android:name=".ui.activities.LocationPermissionNotGrantedActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".ui.activities.InternetClosedActivity"
+            android:launchMode= "singleInstance"
             android:screenOrientation="portrait"
             />
 
