--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -98,4 +98,5 @@ dependencies {
     compile 'com.github.ganfra:material-spinner:1.1.1'
     compile 'com.github.lovetuzitong:MultiImageSelector:1.1'
     compile 'org.lucasr.twowayview:twowayview:0.1.4'
+    compile 'jp.wasabeef:picasso-transformations:2.1.0'
 }
