--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -95,6 +95,9 @@
         <activity android:name=".ui.activities.AddPhotosDoDiveSpotActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".ui.activities.SearchSpotOrLocationActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".ui.activities.AddDiveSpotActivity"
             android:screenOrientation="portrait"/>
         <activity
