Editors list activity

--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -110,6 +110,9 @@
             android:name=".ui.activities.FilterActivity"
             android:screenOrientation="portrait"/>
         <activity
+            android:name=".ui.activities.EditorsListActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".ui.activities.CheckInPeoplesActivity"
             android:screenOrientation="portrait"/>
         <activity
