--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -9,7 +9,6 @@ buildscript {
 }
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
-apply plugin: 'com.google.gms.google-services'
 
 android {
     signingConfigs {
@@ -17,8 +16,8 @@ android {
             storeFile file('../../../build/debug.keystore')
         }
     }
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24"
     defaultConfig {
         applicationId "com.ddscanner"
         minSdkVersion 16
@@ -29,12 +28,13 @@ android {
 
     }
     buildTypes {
-//        debug {
-//            applicationIdSuffix ".debug"
+        debug {
+            ext.enableCrashlytics = false
+            applicationIdSuffix ".debug"
 //            minifyEnabled false
 //            shrinkResources false
 //            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules-debug.pro'
-//        }
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -69,11 +69,11 @@ dependencies {
     }
     compile files('libs/AF-Android-SDK.jar')
     compile 'org.solovyev.android.views:linear-layout-manager:0.5@aar'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.android.support:recyclerview-v7:24.0.0'
     compile 'com.facebook.android:facebook-android-sdk:4.9.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:support-v13:23.4.0'
+    compile 'com.android.support:design:24.0.0'
+    compile 'com.android.support:support-v13:24.0.0'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
@@ -84,13 +84,15 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.appyvet:materialrangebar:1.3'
     compile 'com.google.maps.android:android-maps-utils:0.4.3'
-    compile 'com.google.android.gms:play-services-plus:9.0.2'
-    compile 'com.google.android.gms:play-services-auth:9.0.2'
-    compile 'com.google.android.gms:play-services-gcm:9.0.2'
-    compile 'com.google.android.gms:play-services-maps:9.0.2'
-    compile 'com.google.android.gms:play-services-location:9.0.2'
-    compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.android.support:percent:23.4.0'
+    compile 'com.google.android.gms:play-services-plus:9.2.0'
+    compile 'com.google.android.gms:play-services-auth:9.2.0'
+    compile 'com.google.android.gms:play-services-gcm:9.2.0'
+    compile 'com.google.android.gms:play-services-maps:9.2.0'
+    compile 'com.google.android.gms:play-services-location:9.2.0'
+    compile 'com.google.android.gms:play-services-places:9.2.0'
+    compile 'com.google.firebase:firebase-core:9.2.0'
+    compile 'com.android.support:cardview-v7:24.0.0'
+    compile 'com.android.support:percent:24.0.0'
     compile 'com.github.rey5137:material:1.2.2'
     compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
     compile 'com.afollestad.material-dialogs:core:0.8.5.9'
@@ -99,3 +101,5 @@ dependencies {
     compile 'com.github.lovetuzitong:MultiImageSelector:1.1'
     compile 'jp.wasabeef:picasso-transformations:2.1.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
